# jay_lib

./: .gitignore  Cargo.toml  README.md  forme.md
.temporary/: config.toml
doc/: SUMMARY.md  crates.js  help.html  search-index.js  settings.html  source-files.js
doc/jay_lib/: all.html  index.html  sidebar-items.js
doc/jay_lib/config/: fn.set_conf.html  index.html  sidebar-items.js  static.DATA_FROM.html  static.DATA_TIDY.html  static.DB_LOCATION.html
doc/jay_lib/fns/: index.html  sidebar-items.js
doc/jay_lib/fns/fn_db/: fn.c_db.html  fn.sql_execute.html  fn.sql_execute_batch.html  index.html  sidebar-items.js
doc/jay_lib/fns/fn_io/: fn.f_string.html  fn.get_file_date_name.html  fn.get_file_time_name.html  fn.s_f.html  fn.v_f.html  index.html  sidebar-items.js
doc/jay_lib/fns/fn_net/: fn.get_ip.html  index.html  sidebar-items.js
doc/jay_lib/fns/fn_str/: fn.capitalize.html  fn.capitalize_first.html  fn.check_word.html  fn.check_zh.html  fn.del_mid_str.html  fn.first_word.html  fn.g_str_v.html  fn.get_mid_str.html  fn.is_number.html  fn.last_word.html  fn.u8_chars.html  fn.u_str.html  fn.v8_string.html  fn.v_string.html  index.html  sidebar-items.js
doc/src/jay_lib/: config.rs.html  lib.rs.html
doc/src/jay_lib/fns/: fn_db.rs.html  fn_io.rs.html  fn_net.rs.html  fn_str.rs.html  mod.rs.html
src/: config.rs  lib.rs
src/fns/: fn_db.rs  fn_io.rs  fn_net.rs  fn_str.rs  mod.rs
tests/: fn_db_test.rs  fn_str_test.rs
