[package]
name = "jay_lib"
version = "0.0.7"
license = "MIT"
authors = ["Jay Hu <digua1968@outlook.com>"]
description = "A small toolkit."
repository = "https://github.com/rdigua/jay_lib"
categories = ["development-tools"]
readme = "README.md"
documentation = "https://docs.rs/jay_lib"
keywords = ["toolkit","tools","utility"]
edition = "2021"
exclude = [
    "toml",
    "chrono",
    "once_cell",
]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
once_cell = "1.17.1"
toml = "0.7.3"


