[package]
authors = ["Jay Hu <digua1968@outlook.com>"]
categories = ["development-tools"]
description = "A small toolkit."
documentation = "https://docs.rs/jay_lib"
edition = "2021"
exclude = [
  ".*",
  "forme.md",
]
keywords = ["toolkit", "tools", "utility"]
license = "MIT OR Apache-2.0"
name = "jay_lib"
readme = "README.md"
repository = "https://github.com/rdigua/jay_lib"
version = "0.0.11"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
once_cell = "1.17.1"
rusqlite = {version = "0.28.0", features = ["bundled"]}
toml = "0.7.3"
